--- a/pom.xml
+++ b/pom.xml
@@ -37,13 +37,14 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.7</version>
             <scope>runtime</scope>
         </dependency>
+
+
 
         <dependency>
             <groupId>org.javamoney</groupId>
@@ -84,7 +85,11 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>5.3.10</version>
+        </dependency>
 
 
     </dependencies>
