--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
             <version>2.5.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.4.2</version>
+        </dependency>
     </dependencies>
 
     <build>
